--- a/OCCMobileExample1/local.properties
+++ b/OCCMobileExample1/local.properties
@@ -7,4 +7,4 @@
 # location of the SDK. This is only used by Ant
 # For customization when using a Version Control System, please read the
 # header note.
-sdk.dir=/home/arch/necessitas/necessitas_new/android-sdk-linux_x86
+sdk.dir=${user.home}/OCCANDROID/android-sdk-linux_x86
